{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 467,
  "lineage": "bad933fb-9729-86e2-486f-b0d34170865a",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a685d043b791389b",
            "arn": "arn:aws:ec2:eu-central-1:253490768279:elastic-ip/eipalloc-0a685d043b791389b",
            "domain": "vpc",
            "id": "eipalloc-0a685d043b791389b",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-57-102-184.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.102.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:internet-gateway/igw-07a62bf28189cc65c",
            "id": "igw-07a62bf28189cc65c",
            "owner_id": "253490768279",
            "vpc_id": "vpc-08a62831828c0bea4"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a685d043b791389b",
            "association_id": "eipassoc-03db48e40cfc8e568",
            "connectivity_type": "public",
            "id": "nat-04c9ccb25295b637a",
            "network_interface_id": "eni-0c6f29a7b667ba210",
            "private_ip": "10.0.1.102",
            "public_ip": "52.57.102.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c0a03e159b20ac4d",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.subnets",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:route-table/rtb-04a7789198fb058ff",
            "id": "rtb-04a7789198fb058ff",
            "owner_id": "253490768279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04c9ccb25295b637a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a62831828c0bea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nt",
            "module.network.aws_subnet.subnets",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:route-table/rtb-004a126874f8e6a41",
            "id": "rtb-004a126874f8e6a41",
            "owner_id": "253490768279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a62bf28189cc65c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a62831828c0bea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cb5168db2366e41",
            "route_table_id": "rtb-04a7789198fb058ff",
            "subnet_id": "subnet-0500a3545c9b0c31b"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nt",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.subnets",
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "main-private-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d239e4124b31d1fa",
            "route_table_id": "rtb-04a7789198fb058ff",
            "subnet_id": "subnet-02edf9408802180ee"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nt",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.subnets",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d59e4756ef7d110",
            "route_table_id": "rtb-004a126874f8e6a41",
            "subnet_id": "subnet-0c0a03e159b20ac4d"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.subnets",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main-private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:subnet/subnet-0500a3545c9b0c31b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0500a3545c9b0c31b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490768279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08a62831828c0bea4"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "main-private-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:subnet/subnet-02edf9408802180ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02edf9408802180ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490768279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08a62831828c0bea4"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "main-public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:subnet/subnet-0c0a03e159b20ac4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0a03e159b20ac4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490768279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08a62831828c0bea4"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:vpc/vpc-08a62831828c0bea4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096429ea09f3db040",
            "default_route_table_id": "rtb-005291f4f8c5db0d4",
            "default_security_group_id": "sg-0af2deaeb35512062",
            "dhcp_options_id": "dopt-04c18528da53c85f3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a62831828c0bea4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005291f4f8c5db0d4",
            "owner_id": "253490768279"
          }
        }
      ]
    }
  ]
}